# Baresip-DemoAudioCall

./: README.md
AndroidBaresipDemo/: build.gradle  local.properties  settings.gradle
AndroidBaresipDemo/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
AndroidBaresipDemo/app/src/main/: AndroidManifest.xml
AndroidBaresipDemo/baresiplib/: CMakeLists.txt  build.gradle  proguard-rules.pro
AndroidBaresipDemo/baresiplib/src/androidTest/java/net/edge_works/baresiplib/: ExampleInstrumentedTest.java
AndroidBaresipDemo/baresiplib/src/main/: AndroidManifest.xml
AndroidBaresipDemo/baresiplib/src/main/assets/baresip/: config  contacts  panda.pem  rootca.pem
AndroidBaresipDemo/baresiplib/src/main/cpp/: androidvideo.cpp  baresip_helper.c  baresip_helper.h  baresipwrapper.c  baresipwrapper.h
AndroidBaresipDemo/baresiplib/src/main/cpp/ffmpeg/include/libavdevice/: avdevice.h
AndroidBaresipDemo/baresiplib/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
AndroidBaresipDemo/baresiplib/src/main/cpp/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libswscale.pc
AndroidBaresipDemo/baresiplib/src/main/cpp/re/include/: android-log.h
AndroidBaresipDemo/baresiplib/src/main/cpp/speexdsp/include/speex/: speex_config_types.h
AndroidBaresipDemo/baresiplib/src/main/cpp/speexdsp/lib/: libspeexdsp.la
AndroidBaresipDemo/baresiplib/src/main/cpp/speexdsp/lib/pkgconfig/: speexdsp.pc
AndroidBaresipDemo/baresiplib/src/main/cpp/x264/include/: x264.h
AndroidBaresipDemo/baresiplib/src/main/cpp/x264/lib/pkgconfig/: x264.pc
AndroidBaresipDemo/baresiplib/src/main/cpp/zrtp/include/: zrtp_config_unix.h
AndroidBaresipDemo/baresiplib/src/main/java/net/edge_works/baresiplib/: TelephonyEvent.java  TelephonyService.java
AndroidBaresipDemo/baresiplib/src/main/java/net/edge_works/baresiplib/util/: CommonUtil.java  IOUtils.java  LineIterator.java
AndroidBaresipDemo/baresiplib/src/main/res/layout/: fragment_videowindows.xml
AndroidBaresipDemo/baresiplib/src/main/res/values/: strings.xml
AndroidBaresipDemo/baresiplib/src/test/java/net/edge_works/baresiplib/: ExampleUnitTest.java
AndroidBaresipDemo/gradle/wrapper/: gradle-wrapper.properties
baresip-android/: Makefile  autobuild.sh
baresip-android/baresip/src/: ua.c
baresip-android/ffmpeg/include/libavutil/: ffversion.h
baresip-android/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc
baresip-android/openssl/: Makefile  Makefile.bak  libcrypto.pc  libssl.pc  openssl.pc
baresip-android/openssl/crypto/: buildinf.h
baresip-android/opus/: Makefile  config.h  config.status  libopus.la  libtool  opus-uninstalled.pc  opus.pc  opus_compare  opus_demo  repacketizer_demo
baresip-android/opus/.libs/: libopus.lai
baresip-android/opus/celt/: bands.lo  celt.lo  celt_decoder.lo  celt_encoder.lo  celt_lpc.lo  cwrs.lo  entcode.lo  entdec.lo  entenc.lo  kiss_fft.lo  laplace.lo  mathops.lo  mdct.lo  modes.lo  pitch.lo  quant_bands.lo  rate.lo  vq.lo
baresip-android/opus/celt/.deps/: bands.Plo  celt.Plo  celt_decoder.Plo  celt_encoder.Plo  celt_lpc.Plo  cwrs.Plo  entcode.Plo  entdec.Plo  entenc.Plo  kiss_fft.Plo  laplace.Plo  mathops.Plo  mdct.Plo  modes.Plo  pitch.Plo  quant_bands.Plo  rate.Plo  vq.Plo
baresip-android/opus/celt/arm/: arm_celt_map.lo  armcpu.lo  celt_neon_intr.lo
baresip-android/opus/celt/tests/: test_unit_cwrs32  test_unit_dft  test_unit_entropy  test_unit_laplace  test_unit_mathops  test_unit_mdct  test_unit_rotation  test_unit_types
baresip-android/opus/doc/: Doxyfile  Makefile
baresip-android/opus/silk/: A2NLSF.lo  CNG.lo  HP_variable_cutoff.lo  LPC_analysis_filter.lo  LPC_inv_pred_gain.lo  LP_variable_cutoff.lo  NLSF2A.lo  NLSF_VQ.lo  NLSF_VQ_weights_laroia.lo  NLSF_decode.lo  NLSF_del_dec_quant.lo  NLSF_encode.lo  NLSF_stabilize.lo  NLSF_unpack.lo  NSQ.lo  NSQ_del_dec.lo  PLC.lo  VAD.lo  VQ_WMat_EC.lo  ana_filt_bank_1.lo  biquad_alt.lo  bwexpander.lo  bwexpander_32.lo  check_control_input.lo  code_signs.lo  control_SNR.lo  control_audio_bandwidth.lo  control_codec.lo  debug.lo  dec_API.lo  decode_core.lo  decode_frame.lo  decode_indices.lo  decode_parameters.lo  decode_pitch.lo  decode_pulses.lo  decoder_set_fs.lo  enc_API.lo  encode_indices.lo  encode_pulses.lo  (+36 more)
baresip-android/opus/silk/.deps/: A2NLSF.Plo  CNG.Plo  HP_variable_cutoff.Plo  LPC_analysis_filter.Plo  LPC_inv_pred_gain.Plo  LP_variable_cutoff.Plo  NLSF2A.Plo  NLSF_VQ.Plo  NLSF_VQ_weights_laroia.Plo  NLSF_decode.Plo  NLSF_del_dec_quant.Plo  NLSF_encode.Plo  NLSF_stabilize.Plo  NLSF_unpack.Plo  NSQ.Plo  NSQ_del_dec.Plo  PLC.Plo  VAD.Plo  VQ_WMat_EC.Plo  ana_filt_bank_1.Plo  biquad_alt.Plo  bwexpander.Plo  bwexpander_32.Plo  check_control_input.Plo  code_signs.Plo  control_SNR.Plo  control_audio_bandwidth.Plo  control_codec.Plo  debug.Plo  dec_API.Plo  decode_core.Plo  decode_frame.Plo  decode_indices.Plo  decode_parameters.Plo  decode_pitch.Plo  decode_pulses.Plo  decoder_set_fs.Plo  enc_API.Plo  encode_indices.Plo  encode_pulses.Plo  (+36 more)
baresip-android/opus/silk/arm/: NSQ_neon.lo  arm_silk_map.lo
baresip-android/opus/silk/float/: LPC_analysis_filter_FLP.lo  LPC_inv_pred_gain_FLP.lo  LTP_analysis_filter_FLP.lo  LTP_scale_ctrl_FLP.lo  apply_sine_window_FLP.lo  autocorrelation_FLP.lo  burg_modified_FLP.lo  bwexpander_FLP.lo  corrMatrix_FLP.lo  encode_frame_FLP.lo  energy_FLP.lo  find_LPC_FLP.lo  find_LTP_FLP.lo  find_pitch_lags_FLP.lo  find_pred_coefs_FLP.lo  inner_product_FLP.lo  k2a_FLP.lo  levinsondurbin_FLP.lo  noise_shape_analysis_FLP.lo  pitch_analysis_core_FLP.lo  prefilter_FLP.lo  process_gains_FLP.lo  regularize_correlations_FLP.lo  (+8 more)
baresip-android/opus/src/: analysis.lo  mlp.lo  mlp_data.lo  opus.lo  opus_decoder.lo  opus_encoder.lo  opus_multistream.lo  opus_multistream_decoder.lo  opus_multistream_encoder.lo  repacketizer.lo
baresip-android/opus/tests/: test_opus_api  test_opus_decode  test_opus_encode  test_opus_padding
baresip-android/zrtp/: README.md
baresip-android/zrtp/src/: zrtp.c  zrtp_crypto_ecdh.c  zrtp_engine.c
(+74 files in other folders)
